Fix some layout issues

--- a/src/main/resources/gate/Gate.css
+++ b/src/main/resources/gate/Gate.css
@@ -868,8 +868,9 @@ fieldset > label > form[style] > textarea {
 }
 fieldset > label > span[style] > label,
 fieldset > label > form[style] > label {
-  flex-grow: 1;
   padding: 4px;
+  flex-grow: 1;
+  overflow: auto;
   text-indent: 0;
   line-height: 16px;
   white-space: normal;
@@ -1598,6 +1599,9 @@ div.Dialog > div:last-child > dialog {
   border: none;
   padding: 0px;
   flex-grow: 1;
+}
+div.Dialog > div:last-child > iframe {
+  overflow: hidden;
 }
 div.Message {
   width: 800px;
@@ -2599,6 +2603,7 @@ div.PageControl > div iframe,
 div.LinkControl > div iframe {
   width: 100%;
   border: none;
+  overflow: hidden;
 }
 div.PageControl > div {
   display: none;
